--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light fixed-top bg-dark" style="opacity: 0.9;" id="mainNav" st>
     <div class="container">
-      <a class="navbar-brand" href="{{url_for('get_all_posts')}}" id="nav-baslik" >Erkam's Blog</a>
+      <a class="navbar-brand" href="{{url_for('home.get_all_posts')}}" id="nav-baslik" >Erkam's Blog</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" style="background-color: #007acc;" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -36,18 +36,18 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('get_all_posts') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('home.get_all_posts') }}">Home</a>
           </li>
           {% if not current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}" style="color: #21a2f1;">Login</a>
+            <a class="nav-link" href="{{ url_for('user.login') }}" style="color: #21a2f1;">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('user.register') }}">Register</a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout') }}" style="color: #8d534c;">{{ current_user.name }} - Log Out</a>
+            <a class="nav-link" href="{{ url_for('user.logout') }}" style="color: #8d534c;">{{ current_user.name }} - Log Out</a>
           </li>
           {% endif %}
           <li class="nav-item">
