--- a/templates/post.html
+++ b/templates/post.html
@@ -35,9 +35,16 @@
                         Post</a>
                 </div>
                 {% endif %}
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-md-10 mx-auto">
+                            <div class="clearfix">
+                                <a class="btn btn-primary float-right" href="{{url_for('edit_post', post_id=post.id)}}">👍</a>
+                            </div>
 
 
-                <!--           Comments Area -->
+
+                <!--           Comments Area          -->
 
                 {{ ckeditor.load() }}
                 {{ ckeditor.config(name='comment_text') }}
@@ -45,15 +52,15 @@
 
 
                 <div class="col-lg-8 col-md-10 mx-auto comment">
-                    {% for comment in post.comments: %}
+                    {% for comment in post.comments %}
                     <ul class="commentList">
-                        <li>
+                        <li style="border-style: solid;">
                             <div class="commenterImage">
-                                <img src="{{ comment.comment_author.email | gravatar }}"/>
+                                <img src="{{ comment.comment_author.email | gravatar }}"/> <!-- GRAVATAR -->
                             </div>
                             <div class="commentText">
-                                {{comment.text|safe}}
-                                <span class="date sub-text">{{comment.comment_author.name}}</span>
+                                {{comment.text|safe}}                                           <!-- COMMENT TEXT -->
+                                <span class="date sub-text">{{comment.comment_author.name}}</span> <!-- AUTHOR NAME -->
 
                             </div>
                         </li>
