--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     <div class="col-lg-8 col-md-10 mx-auto">
       {% for post in all_posts %}
       <div class="post-preview">
-        <a href="{{ url_for('admin.show_post', post_id=post.id) }}">
+        <a href="{{ url_for('user.show_post', post_id=post.id) }}">
           <h2 class="post-title">
             {{post.title}}
           </h2>
