--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light fixed-top bg-dark" style="opacity: 0.9;" id="mainNav" st>
     <div class="container">
-      <a class="navbar-brand" href="{{url_for('home.get_all_posts')}}" id="nav-baslik" >Erkam's Blog <strong><span>☂️</span></strong> </a>
+      <a class="navbar-brand" href="{{url_for('home.index')}}" id="nav-baslik" >Erkam's Blog <strong><span>☂️</span></strong> </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" style="background-color: #007acc;" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('home.get_all_posts') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('home.index') }}">Home</a>
           </li>
           {% if not current_user.is_authenticated %}
           <li class="nav-item">
