--- a/templates/post.html
+++ b/templates/post.html
@@ -31,7 +31,7 @@
                 <hr>
                 {% if current_user.id == 1 %}
                 <div class="clearfix">
-                    <a class="btn btn-primary float-right" href="{{url_for('edit_post', post_id=post.id)}}">Edit
+                    <a class="btn btn-primary float-right" href="{{url_for('admin.edit_post', post_id=post.id)}}">Edit
                         Post</a>
                 </div>
                 {% endif %}
