--- a/templates/add.html
+++ b/templates/add.html
@@ -6,14 +6,13 @@
 <div class="image-wrapper" style="background-image: url('https://wallpaperaccess.com/full/2063914.jpg');height:400px;">
 
 </div>
-<div class="content">
-    <h1 class="heading">Add a Movie</h1>
+<div class="content" style="margin: auto;">
+    <h1 class="heading" style="margin: auto;">Add a Movie</h1>
     <form action="{{ url_for('movie.add') }}" method ="post">
       <div class="mb-3">
         <label for="title" class="form-label">Movie Name</label>
         <input type="text" class="form-control" name="title" aria-describedby="helpId" placeholder="Search a movie">
-        <small id="helpId" class="form-text text-muted">Write a Movie Title</small>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-dark">Submit</button>
       </div>
     </form>
 </div>
